--- a/mingduo-security-browser/src/main/resources/static/my-signIn.html
+++ b/mingduo-security-browser/src/main/resources/static/my-signIn.html
@@ -33,5 +33,27 @@
 		</table>
 	</form>
 
+	<h3>短信登录</h3>
+	<form action="/authentication/mobile" method="post">
+		<table>
+			<tr>
+				<td>手机号:</td>
+				<td><input type="text" name="mobile" value="18751850344"></td>
+			</tr>
+			<tr>
+				<td>短信验证码:</td>
+				<td>
+					<input type="text" name="smsCode">
+					<a href="/code/sms?mobile=18751850344">发送验证码</a>
+				</td>
+			</tr>
+			<tr>
+				<td colspan='2'><input name="remember-me" type="checkbox" value="true" />记住我</td>
+			</tr>
+			<tr>
+				<td colspan="2"><button type="submit">登录</button></td>
+			</tr>
+		</table>
+	</form>
 </body>
 </html>
