--- a/mingduo-security-sso-client-A/src/main/resources/static/index.html
+++ b/mingduo-security-sso-client-A/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>SSO Demo Client1</h1>
-	<a href="http://127.0.0.1:8848/client2/index.html">访问Client2</a>
+	<a href="http://localhost:8848/client2/index.html">访问Client2</a>
 </body>
 </html>
