--- a/mingduo-security-sso-client-B/src/main/resources/static/index.html
+++ b/mingduo-security-sso-client-B/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>SSO Demo Client2</h1>
-	<a href="http://127.0.0.1:8847/client2/index.html">访问Client1</a>
+	<a href="http://localhost:8847/client1/index.html">访问Client1</a>
 </body>
 </html>
